# su-courses

./: .gitmodules
aagb/: .gitignore  tme4.py  tme5
aagb/tme1/: blosum62.txt  main.py  notebook.ipynb
aagb/tme2/: main.py  notebook.ipynb
aagb/tme3/: main.py  notebook.ipynb
aagb/tme4/: notebook.ipynb
aagb/tme5/: .gitignore  main.py  notebook.ipynb
complex/: exempleinstance.txt
complex/project/: algorithms.py  benchmark.py  graph.pickle  graph.py  main.py  test.py
complex/tme7/: .gitignore  main.py
complex/tme8/: main.py
crypto/: .gitignore
crypto/annales/: main.py
deeplife/: .gitignore
deeplife/experiments/: main.ipynb
deeplife/hackaton/: notebook.ipynb
deeplife/l1/: Deep4Life_Lab_1_Introduction_to_pytorch_noSolution.ipynb
deeplife/l13/: notebook.ipynb
deeplife/l2opt/: DeepLife_week3_VAE.ipynb
deeplife/l3/: Lecture2_4EUplus_lab_colab_withSolutions.ipynb
deeplife/l7/: .gitignore  Deeplife_VEGA_session_without_solutions.ipynb
deeplife/tme-solo/: TME-Solo-5-4-etudiants.ipynb
deeplife/tme-solo2/: Tme-Solo-2-v1.ipynb
deeplife/tme1/: TME 1 Deeplife-version-etudiants.ipynb
deeplife/tme3/: TME3-stu.ipynb
deeplife/tme4/: TME4-stu.ipynb
internship/: homomorphism.ipynb
lrc/: tme2.txt  tme3.txt  tme4.txt  tme5.txt
mapsi/: .gitignore
mogpl/: main.py
presentations/: numpy.ipynb  solutions.ipynb
project/: .gitignore  variants.py
project/structure/: .gitignore  Cargo.toml  main.py
project/structure/src/: features.rs  gn.rs  lib.rs  main.rs  mutations.rs  output.rs  plddt.rs  structures.rs  variants.rs
sbas/: td8.py
(+179 files in other folders)
