[package]
name = "structure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
pdbtbx = "0.11.0"
serde = { version = "1.0.196", features = ["std", "derive"] }
serde-pickle = "1.1.1"
serde_json = "1.0.113"
